Link 2 new recipes

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">World's <strong>BEST</strong> Lasagna</a>
+    <a href="recipes/salmon-salad-rice-bowl.html">Spicy Salmon Salad Rice Bowl</a>
+    <a href="recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a>
 </body>
 </html>
