--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">World's <strong>BEST</strong> Lasagna</a>
-    <a href="recipes/salmon-salad-rice-bowl.html">Spicy Salmon Salad Rice Bowl</a>
-    <a href="recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a>
+    <ul>
+        <li><a href="recipes/lasagna.html">World's <strong>BEST</strong> Lasagna</a></li>
+        <li><a href="recipes/salmon-salad-rice-bowl.html">Spicy Salmon Salad Rice Bowl</a></li>
+        <li><a href="recipes/grilled-tomahawk-steak.html">Grilled Tomahawk Steak</a></li>
+    </ul>
 </body>
 </html>
